fixed the header overlapping

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@
   visibility: hidden;
 }
 
+
 body {
   margin:0;
   cursor: url("../public/cursor.png"), auto;
@@ -268,6 +269,7 @@ span {
   #flex {
     flex-direction: column; 
     align-items: center; 
+    z-index: 1;
   }
 
   #box-1 {
@@ -286,6 +288,7 @@ span {
   #title div:first-of-type {
     font-size: 5.25vh;
     height: 5.5vh;
+
   }
   
   #title div:nth-of-type(2) {
